<resources>
    <string name="app_name">MyRecipeOrganizer</string>

    <string name="RecipeOneTitle">LEMON GARLIC BUTTER CHICKEN</string>
    <string name="RecipeOneDescription">A great chicken dish from India</string>

    <string-array name="RecipeOneIng">
        <item>3 – 6 skinless, boneless chicken thighs</item>
        <item>1 pound (450g) green beans, trimmed</item>
        <item>3 tablespoons butter, divided or (ghee for paleo diet)</item>
        <item>4 garlic cloves, minced</item>
        <item>1 teaspoon paprika</item>
        <item>1 teaspoon onion powder</item>
        <item>1/4 teaspoon salt and fresh cracked black pepper</item>
        <item>Juice of 1/2 lemon + lemon slices, for garnish</item>
        <item>1/2 cup (125ml) chicken stock</item>
        <item>1 tablespoon hot sauce (we used Sriracha)</item>
        <item>1/4 teaspoon crushed red chili pepper flakes, optional</item>
        <item>1/2 cup fresh chopped parsley</item>
    </string-array>

    <string-array name="RecipeOneDir">
        <item>1. To make the lemon garlic butter chicken thighs recipe with green beans: In a small bowl, combine onion powder, paprika, salt, and pepper. Season chicken thighs generously with the spice mixture. Set aside while you prepare green beans.</item>
        <item> 2. Arrange green beans in a microwave safe dish with half cup (125ml) water. Cook in the microwave for 8 to 10 minutes, until almost done but still crisp.</item>
        <item>3. Melt 2 tablespoons butter in a large skillet over medium to low heat. Lay the seasoned chicken thighs in one layer in the skillet. Cook for 5 to 6 minutes then flip and cook another 5 to 6 minutes, until cooked through and a cooking thermometer displays 165°F (75°C). If chicken browns too quickly, lower the heat. Adjust timing depending on the thickness. Transfer chicken to a plate and set aside.</item>
        <item>4. In the same skillet, lower the heat and melt the remaining tablespoon of butter. Add chopped parsley, garlic, hot sauce, red crushed chili pepper flakes, and pre-cooked green beans and cook for 4 to 5 minutes, stirring regularly, until cooked to your liking. Add lemon juice and chicken stock and reduce the sauce for a couple of minutes, until slightly thickened.</item>
        <item>5. Add cooked chicken thighs back to the pan and reheat quickly. Adjust seasoning with pepper and serve the lemon garlic butter chicken thighs immediately, garnished with more crushed chili pepper, fresh parsley, and a slice of lemon if you like. Enjoy!</item>
    </string-array>

    <string name="RecipeTwoTitle">SALMON AND ASPARAGUS FOIL PACKS</string>
    <string name="RecipeTwoDescription">Salmon and asparagus in a foil package good for baking or BBQ</string>

    <string-array name="RecipeTwoIng">

        <item>2 salmon fillets</item>
        <item>2 tablespoons vegetable broth or chicken broth</item>>
        <item>1/2 tablespoon fresh lemon juice, or to taste</item>
        <item>1 tablespoon of your favorite hot sauce (we used Sriracha)</item>
        <item>4 teaspoons minced garlic (4 cloves)</item>
        <item>Salt and fresh ground black pepper, to taste</item>
        <item>4 tablespoons butter, diced into small cubes (or ghee)</item>
        <item>2 tablespoons fresh chopped parsley or cilantro</item>
        <item>1 lb (450g) medium-thick asparagus, woody ends trimmed</item>
    </string-array>

    <string-array name="RecipeTwoDir">
        <item>1. To prepare the oven-baked salmon in foil packs: Preheat your oven to 425ºF (220ºC). Cut 2 sheets of 14 by 12-inch (35 x 30 cm) heavy-duty aluminum foil then lay each piece separately on the countertop. In a small bowl, combine the ingredients for the garlic butter sauce: broth, lemon juice, and hot sauce.</item>
        <item>2. Season both sides of the salmon fillets with salt and pepper and divide salmon onto the aluminum foil near the center then place trimmed asparagus to one side of the salmon, following the long direction of the foil.</item>
        <item> name="" type=""3. You can adjust salmon fillets seasoning with more salt and pepper, then sprinkle garlic on top. Drizzle the garlic butter sauce generously over the salmon fillets and asparagus.</item>
        <item>4. Divide butter pieces evenly among the foil packets, layering them over the salmon fillet and asparagus.</item>
        <item>5. Wrap salmon foil packets in and crimp edges together then wrap ends up. Don’t wrap too tight – keep a little extra space inside for heat to circulate.</item>
        <item>6. Transfer the salmon foil packs to a baking sheet and bake salmon in the oven, sealed side upward until salmon has cooked through, about 9 – 12 minutes.</item>
        <item>7. Carefully unwrap the baked salmon in foil packets then drizzle with more lemon juice and garnish with fresh parsley or cilantro and a slice of lemon. Enjoy!</item>
    </string-array>

    <string name="RecipeThreeTitle">GRAND MARNIER SOUFFLE</string>
    <string name="RecipeThreeDescription">Great for brunch and dinner</string>
    <string-array name="RecipeThreeIng">
    <item>3 tablespoons granulated sugar</item>
        <item>3 tablespoons all-purpose flour</item>
        <item>Unsalted butter, softened, for greasing</item>
        <item>Crème Pâtissière, at room temperature</item>
        <item>2 tablespoons Grand Marnier</item>
        <item>1 tablespoons orange zest</item>
        <item>6 large egg whites, at room temperature</item>
    </string-array>

    <string-array name="RecipeThreeDir">
        <item>1. Preheat oven to 375°F with oven rack in lower third of oven. Stir together granulated sugar and flour in a small bowl; set aside.</item>
        <item>2. Cut a 24- x 12-inch piece of parchment paper; fold lengthwise 3 times (letter- style).</item>
        <item>3. Wrap paper around outside top of a 1-quart soufflé dish to form a collar extending 2 inches above rim; secure tightly with string or tape. </item>
        <item>4. Rub inside of soufflé dish and parchment collar with butter. Dust with sugar mixture, shaking out excess. </item>
    </string-array>

    <string name="RecipeFourTitle">POULET AU VINAIGRE</string>
    <string name="RecipeFourDescription">Food and Wine named this recipe one of our 40 best</string>
    <string-array name="RecipeFourIng">
        <item>4 unpeeled garlic cloves</item>
        <item>1 (2 1/2- to 3-pound) whole chicken, cut into 10 pieces </item>
        <item>Kosher salt</item>
        <item>Freshly ground black pepper</item>
        <item>1/2 cup mild white wine vinegar or rice vinegar</item>
        <item>2 tablespoons chopped fresh flat-leaf parsley </item>
        <item>2 tablespoon unsalted butter</item>
    </string-array>

    <string-array name="RecipeFourDir">
        <item>1. Preheat oven to 200°F. Heat clarified butter and garlic in a large, heavy-bottomed skillet over medium-high. (The skillet should be large enough to hold all the chicken pieces in 1 layer.) </item>
        <item>2. Add vinegar, and bring mixture to a brisk boil over medium-high; top chicken with tomatoes and parsley. </item>
        <item>3. Using a spoon, skim and discard fat from surface of vinegar mixture in skillet. Continue to cook over low, undisturbed, until reduced by one-third, 3 to 4 minutes. </item>
        <item>4. Transfer chicken to a platter; pour sauce over chicken, and serve immediately.</item>
    </string-array>



    <string name="add_a_new_recipe_here">Add a New Recipe Here:</string>
    <string name="add1">Add</string>
    <string name="save1">Save</string>
    <string name="new_ingredient">new Ingredient</string>
    <string name="abAddRecipeTitleBar">Add Your Recipe Here!</string>
    <string name="txtHintAddIng">Add Ingredients</string>
    <string name="title_activity_maps">Map</string>
    <string name="butter_chicken">LEMON GARLIC BUTTER CHICKEN</string>
    <string name="chicken">Chicken</string>
    <string name="logo">Logo</string>
    <string name="ingredients">Ingredients:</string>
    <string name="directions">Directions:</string>
    <string name="chickenasparagus">ChickenAsparagus</string>
    <string name="upload_recipe1">Upload Recipe</string>
    <string name="add_ingredients1">Add Ingredients</string>
    <string name="add_directions1">Add Directions</string>
    <string name="recipephoto">RecipePhoto</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="add_directions">Add Directions</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="recipe_name1">Recipe Name</string>
    <string name="description1">Description</string>
    <string name="recipeimage">RecipeImage</string>
    <string name="add2">Add</string>
    <string name="save2">Save</string>
    <string name="add3">Add</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="add_description">Add Descriptions!</string>
    <string name="add_recipe_name">Add Recipe Name!</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>


</resources>