<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipe">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="30dp">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:contentDescription="@string/recipeimage"
          android:scaleType="centerCrop" />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/recipe_name"
          android:textSize="19sp"
          android:id="@+id/text_recipe_name"
          android:layout_marginTop="20dp"
          />



      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/description"
          android:textSize="19sp"
          android:id="@+id/text_recipe_description"
          android:layout_marginTop="10dp"
          android:inputType="TODO" />

      <Button
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/add_ingredients"
          android:textSize="22sp"
          android:backgroundTint="@color/cardview_dark_background"
          android:onClick="btnAddIngredient"
          />

      <Button
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/add_directions"

          android:textSize="22sp"
          android:backgroundTint="@color/cardview_dark_background"
          android:onClick="btnAddDirections"
          />



      <Button
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/upload_recipe"

          android:textSize="22sp"
          android:backgroundTint="@color/cardview_dark_background"
          android:onClick="btnAddRecipe"
          />









  </LinearLayout>

</ScrollView>