<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeDetail"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/chickenasparagus"
            android:scaleType="fitXY"
            android:src="@drawable/recipe3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"

            android:id="@+id/txtTitle"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"


            android:id="@+id/txtDescription"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/ingredients"
            android:textStyle="bold" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewIngredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/directions"
            android:textStyle="bold"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewDirections"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>



</ScrollView>
